--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,8 +12,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 1000vw;
+  height: 1000vh;
   background: rgba(0, 0, 0, 0.3);
   filter: blur(10px);
   pointer-events: none;
@@ -42,19 +42,18 @@ body {
 
 .flash-text {
   position: absolute;
-  z-index: 1; /* Очень высокий индекс */
+  z-index: 1;
   color: white;
-  /* font-family: 'Times New Roman', sans-serif; */
+
   font-size: 48px;
   font-weight: bold;
-  /* text-shadow: 0 0 15px black; */
+
   background-color: rgba(0, 0, 0, 0.6);
   padding: 10px 20px;
   border-radius: 5px;
   pointer-events: none;
 }
 
-/* Анимация исчезновения текста */
 @keyframes textFade {
   0% {
     opacity: 1;
@@ -65,7 +64,7 @@ body {
 }
 
 .flash-text {
-  animation: textFade 0.03s; /* Плавное исчезновение */
+  animation: textFade 0.03s;
 }
 canvas {
   display: block;
@@ -81,9 +80,9 @@ canvas {
   height: 100vh;
   pointer-events: none;
   z-index: 20;
-  opacity: 0.45; /* Прозрачность фона */
+  opacity: 0.45;
 }
-/* Плавающие круги */
+
 .floating-circles {
   position: absolute;
   top: 0;
@@ -95,7 +94,6 @@ canvas {
   overflow: hidden;
 }
 
-/* Мерцающий фон */
 .glitch-background {
   position: absolute;
   top: 0;
@@ -120,7 +118,6 @@ canvas {
   }
 }
 
-/* Анимация волны */
 @keyframes waveAnimation {
   0% {
     transform: scale(1);
@@ -137,7 +134,6 @@ canvas {
   pointer-events: none;
 }
 
-/* Анимация текста */
 @keyframes textAnimation {
   0% {
     transform: translateY(0);
